# goban-screenhack

./: Cargo.toml  LICENSE  README.md
config/: goban.xml
src/: args.rs  goban.rs  goban_display.rs  main.rs  ui.rs  xscreensaver_context.rs  xscreensaver_window.rs
src/sgf/: errors.rs  mod.rs  parser.rs  props.rs  sgf_node.rs
src/ui/: annotations.rs  goban_display.rs  mod.rs  sgf_walker.rs
