[package]
name = "goban-screenhack"
version = "0.1.1"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
edition = "2018"
exclude = ["demo/demo.gif"]
default-run = "goban"
license = "MIT"
repository = "https://github.com/julianandrews/goban-screenhack"
readme = "README.md"
description = "XScreensaver hack that displays go games"
keywords = ["baduk", "sgf", "go", "screensaver", "xscreensaver"]
categories = ["games"]

[[bin]]
name = "goban"
path = "src/main.rs"

[dependencies]
getopts = "~0.2"
glutin = "~0.24"
gl = "~0.14"
rand = "~0.7"
sgf-parse = "~0.3"

[dependencies.nanovg]
version = "1.0.2"
features = ["gl3"]

[package.metadata.deb]
assets = [
    ["target/release/goban", "usr/lib/xscreensaver/", "755"],
    ["config/goban.xml", "/usr/share/xscreensaver/config/", "644"],
]
