[package]
name = "goban-screenhack"
version = "0.1.3"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
edition = "2018"
exclude = ["demo/demo.gif"]
default-run = "goban"
license = "MIT"
repository = "https://github.com/julianandrews/goban-screenhack"
readme = "README.md"
description = "XScreensaver hack that displays go games"
keywords = ["baduk", "sgf", "go", "screensaver", "xscreensaver"]
categories = ["games"]

[[bin]]
name = "goban"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"
glutin = "0.26.0"
gl = "0.14.0"
rand = "0.8.2"
sgf-parse = "2.0.2"

[dependencies.nanovg]
version = "1.0.2"
features = ["gl3"]

[package.metadata.deb.variants.buster]
assets = [
    ["target/release/goban", "usr/lib/xscreensaver/", "755"],
    ["config/goban.xml", "/usr/share/xscreensaver/config/", "644"],
]

[package.metadata.deb.variants.bullseye]
assets = [
    ["target/release/goban", "usr/libexec/xscreensaver/", "755"],
    ["config/goban.xml", "/usr/share/xscreensaver/config/", "644"],
]
