[package]
name = "goban-screenhack"
version = "0.1.4"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
edition = "2018"
exclude = ["demo/demo.gif"]
default-run = "goban"
license = "MIT"
repository = "https://github.com/julianandrews/goban-screenhack"
readme = "README.md"
description = "XScreensaver hack that displays go games"
keywords = ["baduk", "sgf", "go", "screensaver", "xscreensaver"]
categories = ["games"]

[[bin]]
name = "goban"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"
glutin = "0.27.0"
gl = "0.14.0"
rand = "0.8.4"
sgf-parse = "3.1.1"

[dependencies.nanovg]
version = "1.0.2"
features = ["gl3"]

[package.metadata.deb]
assets = [
    # use /usr/lib/xscreensaver for Debian Buster or Ubuntu Hirsuite
    ["target/release/goban", "usr/libexec/xscreensaver/", "755"],
    ["config/goban.xml", "/usr/share/xscreensaver/config/", "644"],
]
